# monkeytrap

./: .gitignore  LICENSE  README.md
linux/ipc/: CMakeLists.txt  arr.cpp  atom_shm.cpp  shm.cpp
linux/ipc_fd/: Makefile  efd.c  send_fd.c  send_fd.h
linux/misc/: life.cpp
posts/: bitcoin-value-debate.html
python/image/: rgb2rgba.py  rgba2rgb.py
scripts/: logdel.py
